myteo/test/analyze/name_resolution/unresolved_name_error.myte
module Test

// Names cannot be referenced before they are declared
fun test1() {
  // Error
  x;
  y;

  val x: int = 1;
  fun y() {}

  // Succeed
  x;
  y;
}

// Names cannot be referenced outside block scope
fun test2() {
  {
    val x: int = 1;
    fun y() {}

    // Succeed
    x;
    y;
  }

  // Error
  x;
  y;
}

// Names cannot be referenced outside function scope
fun test3() {
  fun inner() {
    val x: int = 1;
    fun y() {}

    // Succeed
    x;
    y;
  }

  // Error
  x;
  y; 
}

// Params cannot be referenced outside function scope
fun test4() {
  fun inner(x: int) {
    // Succeed
    x;
  }

  // Error
  x;
}

// Names cannot be reference in initialize before they are defined
fun test5() {
  val x: int = x;
}

fun main() {}
